# supreme-redis-cs213Project

./: .gitignore  README.md  build.tar  docker-compose.yml  requirements.txt  sort-db-words.py  startup-develenv.sh
app/: README.md  app.py
app/static/: style.css
app/templates/: index.html  top-scores.js
data/: README.md  append-slash-n.sh  congress-to-text.py
flask-webapp/: app.py  todo. md
flask-webapp/static/: back.css  style.css
flask-webapp/templates/: index.html
rusty-redis/redis-union/: Cargo.toml  README.md  unionstore.rs
rusty-redis/redis-union/src/: main.rs  unionstore.rs
rusty-redis/src/: main.rs
srv/: Cargo.toml  README.md
srv/src/: text-to-redis.rs
