[package]
name = "redis-union"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.22.3", features = ["ahash", "aio", "arc-swap", "async-native-tls", "async-std", "async-std-comp", "async-std-tls-comp", "async-trait", "bytes", "cluster", "connection-manager", "crc16", "futures", "futures-util", "json", "native-tls", "pin-project-lite", "r2d2", "rand", "serde", "serde_json", "tls", "tokio", "tokio-comp", "tokio-native-tls", "tokio-native-tls-comp"] }
